# elpAudio

./: .gitignore  LICENSE  README.md  elpAudio.gm81  elpAudio.gm82  elpAudioSettings.gm81  elpAudio_openwith.bat  elpaudiogm82.gm81  elpaudiogm82.gm82  elpaudiosettings.gm81
buttonabout/: sprite.txt
buttonsort/: sprite.txt
data/: vars.txt
default/: theme.ini
light/: theme.ini
objects/: MainMenu.gml  aboutbutton.gml  addmusicbutton.gml  alwontopbutton.gml  backobj.gml  checkbox.gml  gui_button.gml  index.yyd  loadlistbutton.gml  loopbutton.gml  newmain.gml  next_button.gml  pause.gml  play_button.gml  playrandombutton.gml  prev_button.gml  savelistbutton.gml  setfolderbutton.gml  setfolderbutton.txt  settingsobj.gml  sliderbutton.gml  sortplaylist.gml  stopbutton.gml  tree.yyd  visualiser.gml  visualiserbutton.gml  visualname.gml  volumebutton.gml
pc/: Makefile  elpAudio  settings.ini
psp/: CMakeLists.txt
psp/src/: main.cpp
psp/src/gamebreaker/: cgamebreaker.h  gamebreaker.hpp  inicpp.hpp
psp/src/gamebreaker/SoLoud/: soloud.h
psp/src/gamebreaker/nfd/: nfd.h  nfd.hpp
rooms/: index.yyd  tree.yyd
scripts/: FMODErrorStr.gml  FMODGetSpectrumBuffer.gml  FMODGetWaveBuffer.gml  FMODGroupGetSpectrumSnapshot.gml  FMODGroupGetSpectrumSnapshot2.gml  FMODGroupGetWaveSnapshot.gml  FMODGroupGetWaveSnapshot2.gml  FMODGroupSetPitch.gml  FMODInstanceGetFrequency.gml  FMODInstanceGetSpectrumSnapshot.gml  FMODInstanceGetSpectrumSnapshot2.gml  FMODInstanceGetWaveSnapshot.gml  FMODInstanceGetWaveSnapshot2.gml  FMODInstanceSetFrequency.gml  FMODListenerSet3dPositionEx.gml  (+67 more)
(+44 files in other folders)
