cmake_minimum_required(VERSION 3.11)

project(elpAudio-psp)

file(GLOB SOURCES "src/*.cpp" "libgb.so")
add_executable(${PROJECT_NAME} ${SOURCES})

include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
pkg_search_module(SDL2_TTF REQUIRED SDL2_ttf)

#link_directories(${CMAKE_SOURCE_DIR}/lib)

target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS}
    ${SDL2_MIXER_INCLUDE_DIRS}
    ${SDL2_IMAGE_INCLUDE_DIRS}
    ${SDL2_TTF_INCLUDE_DIRS}
    )

target_link_libraries(${PROJECT_NAME} PRIVATE
    ${SDL2_LIBRARIES}
    ${SDL2_MIXER_LIBRARIES}
    ${SDL2_IMAGE_LIBRARIES}
    ${SDL2_TTF_LIBRARIES}
)



if(PSP)
    create_pbp_file(
        TARGET ${PROJECT_NAME}
        ICON_PATH NULL # "../elpaudio.png"
        BACKGROUND_PATH NULL
        PREVIEW_PATH NULL
        TITLE "elpAudio for PSP"
        VERSION 01.00
    )
endif()

